--- a/yuuki/pubspec.yaml
+++ b/yuuki/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^4.16.0
   firebase_auth: ^4.19.0
   firebase_core: ^2.28.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -77,17 +78,22 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+     - family: B612
+       fonts:
+         - asset: fonts/B612-Bold.ttf
+           weight: 700
+     - family: Cabin
+       fonts:
+         - asset: fonts/Cabin-Italic.ttf
+           style: italic
+         - asset: fonts/Cabin-Regular.ttf
+     - family: Jua
+       fonts:
+         - asset: fonts/Jua-Regular.ttf
+     - family: Katibeh
+       fonts:
+         - asset: fonts/Katibeh-Regular.ttf
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
