--- a/yuuki/pubspec.yaml
+++ b/yuuki/pubspec.yaml
@@ -45,7 +45,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  shared_preferences: ^2.0.8
+  smooth_page_indicator: ^1.1.0
+  shared_preferences: ^2.2.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -67,7 +68,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/
     - assets/images/login_signup/
+    - assets/images/onboarding/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
