--- a/yuuki/pubspec.yaml
+++ b/yuuki/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -71,6 +70,7 @@ flutter:
     - assets/images/
     - assets/images/login_signup/
     - assets/images/onboarding/
+    - assets/images/learning/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
