--- a/yuuki/pubspec.yaml
+++ b/yuuki/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -39,13 +40,25 @@ dependencies:
   firebase_core: ^2.28.0
   google_fonts: ^6.2.1
   icons_plus: ^4.0.0
+  flashy_tab_bar2: ^0.0.10
+  draggable_home: ^1.0.5
+  avatar_glow: ^3.0.1
+  card_actions: ^0.0.1
+  tab_container: ^3.5.3
+  custom_sliding_segmented_control: ^1.8.2
+  animated_bottom_navigation_bar: ^1.3.3
+  motion_tab_bar: ^2.0.4
+  cuberto_bottom_bar: ^3.0.0
+  stylish_bottom_bar: ^1.1.0
+  scaled_list: ^2.0.0
+  card_swiper: ^3.0.1
+  smooth_page_indicator: ^1.1.0
+  shared_preferences: ^2.2.2
+  expandable_menu: ^0.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  smooth_page_indicator: ^1.1.0
-  shared_preferences: ^2.2.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,7 +83,6 @@ flutter:
     - assets/images/
     - assets/images/login_signup/
     - assets/images/onboarding/
-    - assets/images/learning/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -86,21 +98,48 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: B612
-       fonts:
-         - asset: assets/fonts/B612-Bold.ttf
-           weight: 700
-     - family: Cabin
-       fonts:
-         - asset: assets/fonts/Cabin-Italic.ttf
-           style: italic
-         - asset: assets/fonts/Cabin-Regular.ttf
-     - family: Jua
-       fonts:
-         - asset: assets/fonts/Jua-Regular.ttf
-     - family: Katibeh
-       fonts:
-         - asset: assets/fonts/Katibeh-Regular.ttf
+    - family: B612
+      fonts:
+        - asset: assets/fonts/B612-Bold.ttf
+          weight: 700
+
+    - family: Cabin
+      fonts:
+        - asset: assets/fonts/Cabin-Italic.ttf
+          style: italic
+        - asset: assets/fonts/Cabin-Regular.ttf
+        
+    - family: Jua
+      fonts:
+        - asset: assets/fonts/Jua-Regular.ttf
+
+    - family: Katibeh
+      fonts:
+        - asset: assets/fonts/Katibeh-Regular.ttf
+
+    - family: Kanit
+      fonts:
+        - asset: assets/fonts/Kanit-Bold.ttf
+
+    - family: Rowdies
+      fonts:
+        - asset: assets/fonts/Rowdies-Light.ttf
+        
+    - family: DancingScript
+      fonts:
+        - asset: assets/fonts/DancingScript-Medium.ttf
+
+    - family: Pacifico
+      fonts:
+        - asset: assets/fonts/Pacifico-Regular.ttf
+
+    - family: Quicksand
+      fonts:
+        - asset: assets/fonts/Quicksand-Bold.ttf
+
+    - family: QuicksandRegular
+      fonts:
+        - asset: assets/fonts/Quicksand-Regular.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
