--- a/yuuki/pubspec.yaml
+++ b/yuuki/pubspec.yaml
@@ -57,10 +57,16 @@ dependencies:
   expandable_menu: ^0.0.5
   flip_card: ^0.7.0
   flutter_tts: ^3.8.5
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: 'launcher_icon'
+  ios: true
+  image_path: 'assets/images/logo/YUUKILauncher.png'
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
