--- a/yuuki/pubspec.yaml
+++ b/yuuki/pubspec.yaml
@@ -92,6 +92,7 @@ flutter:
     - assets/images/login_signup/
     - assets/images/onboarding/
     - assets/images/learning/
+    - assets/images/avatar/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
